<resources>
    <string name="app_name">InsightsShare</string>

    <!-- Toolbar -->
    <string name="title_home_toolbar">Upcoming Events</string>
    <string name="title_my_event_toolbar">My Events List</string>
    <string name="title_create_event_toolbar">Plan an Event</string>
    <string name="title_edit_event_toolbar">Edit My Event</string>
    <string name="title_setting_toolbar">Setting</string>
    <string name="title_event_details">Event Details</string>

    <!-- Bottom Navigation Bar -->
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_create_event">Create Event</string>
    <string name="title_my_event">My Event</string>
    <string name="title_profile">My Profile</string>

    <!-- Event row -->
    <string name="event_creator">created by</string>
    <string name="event_creation_date">on</string>

    <!-- Event Details -->
    <string name="participants_maxed">This event is currently full!</string>
    <string name="participants_list">Event Participants</string>
    <string name="leave_button">Leave Event</string>
    <string name="join_button">Join</string>
    <string name="edit_button">Edit Event</string>
    <string name="delete_button">Cancel Event</string>

    <string name="title_activity_eventplanning5">EventplanningActivity5</string>

    <string name="verification_label">Wait for email verification</string>
    <string name="changeData_button">Change Data</string>
    <string name="verify_button">Email verified?</string>

    <!-- Home -->
    <string name="no_event">Oops... There is currently no upcoming event. Be the first to make one!</string>

    <!-- My Event -->
    <string name="my_created_event_title">Events Created By Me</string>
    <string name="my_participated_event_title">Other Events</string>
    <string name="no_created_event">No Events Created</string>
    <string name="no_participated_event">No Events Participated</string>

    <!-- Splash Screen -->
    <string name="ish_logo">InsightsShare Logo</string>

    <!-- Strings of Activity main-->
    <string name="main_title">Sign-in</string>
    <string name="main_no_account">Don\'t have an account?</string>
    <string name="main_password_label_hint">What is your password?</string>

    <!-- Strings of Activity main and Registr-->
    //labels
    <string name="label_password">Password</string>
    <string name="label_email">Email</string>
    <string name="forgot_pw">Forgot password ?</string>
    //hints
    <string name="username_label_hint">Choose your Username.</string>
    <string name="email_label_hint">What is your email address?</string>
    //button
    <string name="button_sign_in">sign-in</string>
    <string name="button_register">register</string>

    <!-- Strings of Activity Registr-->
    <string name="registr_title">Sign-up</string>
    <string name="registr_already_account">Do you already have an account?</string>
    <string name="registr_label_username">Username</string>
    <string name="registr_datenSchutzErklaerung">I confirm the privacy policy agreement of InsightShare.</string>
    <string name="registr_button_continue">Continue</string>
    <string name="registr_password_label_hint">Choose a password.</string>

    <!-- Strings of Activity Eventplanning5-->
    //labels
    <string name="eventplanning5_title">Plan your event!</string>
    <string name="eventplanning5_label_eventname">Eventname:</string>
    <string name="eventplanning5_label_creator">Creator:</string>
    <string name="eventplanning5_label_description">Description:</string>
    <string name="eventplanning5_label_date">Date:</string>
    <string name="eventplanning5_label_time">Time:</string>
    <string name="eventplanning5_label_location">Location:</string>
    <string name="eventplanning5_label_max_participants">Number of participants:</string>
    <string name="eventplanning5_label_participants">Participants:</string>
    //hints
    <string name="eventplanning5_hint_eventname">What is the name of your event?</string>
    <string name="eventplanning5_hint_description">What is your event all about?</string>
    <string name="eventplanning5_hint_location">Where will your event take place?</string>
    <string name="eventplanning5_hint_max_participants">How many users can participate?</string>
    //button
    <string name="eventplanning5_button_save">save</string>
    <string name="eventplanning5_date">JAN 01 2022</string>
    <string name="eventplanning5_time">00:00 AM</string>
    //automaticly shown name of the user
    <string name="eventplanning5_creator">**Creator**</string>
    //TODO: globalVariable.toString()

    <!-- Strings of Activity Profile-->
    //label
    <string name="settings6_label_profil_edit">Edit profile</string>

    <!-- Strings of Activity Setting-->
    <string name="settings6_label_language">Language</string>
    <string name="settings6_label_lightmode">Darkmode</string>

    //biography from DB
    <string name="settings6_biography">**bio**</string>
    <string name="title_activity_verific">VerificActivity</string>//TODO: get from DB

    <string name="settings6_button_sign_out">Sign Out</string>

    <!-- Strings of Activity EditUserProfile-->
    //labels
    <string name="edit_user_profile_title">Edit profile</string>
    <string name="reset_password">Change Password</string>
    <string name="edit_user_profile_label_username">Username</string>
    <string name="edit_user_profile_label_firstname">First Name</string>
    <string name="edit_user_profile_label_lastname">Last Name</string>
    <string name="edit_user_profile_label_bio">Biography</string>
    <string name="edit_user_profile_label_birthday">Birthday</string>
    <string name="edit_user_profile_label_age">Age</string>
    <string name="edit_user_profile_label_phonenumber">Phone Number</string>
    <string name="edit_user_profile_label_nationality">Nationality</string>
    <string name="edit_user_profile_privacyreminder">Please note, that the information below
        can be seen by everyone on InsightsShare. Therefore consider your privacy before publishing your contact information!</string>
    //Images
    <string name="edit_user_profile_image_backarrow">go back</string>
    <string name="edit_user_profile_image_profilepicture">profilepicture</string>

    <!-- Toast message -->
    <string name="toast_event_created">Event successfully created</string>
    <string name="toast_event_updated">Event successfully updated</string>
    <string name="toast_event_deleted">Event successfully deleted</string>
    <string name="toast_event_participate">You joined the event!</string>
    <string name="toast_event_leave">You left the event</string>
    <string name="toast_profile_changed">Profile successfully updated</string>
    <string name="toast_write_username">Please choose a fitting username.</string>
    <string name="toast_write_maxParticipants">Please enter the maximal number of participants.</string>
    <string name="toast_maxParticipants_limit">Maximum allowed number of participants : 99</string>
    <string name="toast_write_eventName">Please enter the name of the event.</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>