<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventplanningActivity5" >

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TitleEventplanning5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="60dp"
            android:text="@string/eventplanning5_title"
            android:textSize="24sp"
             />

        <TextView
            android:id="@+id/LabelEventName5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="24dp"
            android:text="@string/eventplanning5_label_eventname" />

        <EditText
            android:id="@+id/InputEventName5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/eventplanning5_hint_eventname"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/LabelReferent5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="24dp"
            android:text="@string/eventplanning5_label_creator" />

        <TextView
            android:id="@+id/OutputReferent5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="14dp"
            android:text="@string/eventplanning5_creator" />

        <TextView
            android:id="@+id/LabelDate5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="24dp"
            android:text="@string/eventplanning5_label_date" />

        <EditText
            android:id="@+id/InputDate5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:inputType="date"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/LabelTime5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="24dp"
            android:text="@string/eventplanning5_label_time" />

        <EditText
            android:id="@+id/InputTime5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:inputType="time"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/LabelLocation5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="24dp"
            android:text="@string/eventplanning5_label_location" />

        <EditText
            android:id="@+id/InputLocation5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/eventplanning5_hint_location"
            android:inputType="textMultiLine"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/LabelMaxParticipants5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="24dp"
            android:text="@string/eventplanning5_label_max_participants" />

        <EditText
            android:id="@+id/InputMaxParticipants5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/eventplanning5_hint_max_participants"
            android:inputType="number"
            android:minHeight="48dp" />

        <View
            android:id="@+id/divider5_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/ButtonSave5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:backgroundTint="#9C1C4D"
            android:text="@string/eventplanning5_button_save" />

        <TextView
            android:id="@+id/LabelParticipants5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="24dp"
            android:text="@string/eventplanning5_label_participants" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ListOfParticipants5"/>

    </LinearLayout>
</ScrollView>
