<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrActivity">

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/username_label_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel3"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/registr_password_label_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/email_label_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#9C1C4D"
        android:text="@string/registr_button_continue"
        android:visibility="visible"
        app:iconTint="#9C1C4D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datenSchutzCB"
        tools:text="Weiter" />

    <TextView
        android:id="@+id/registerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/registr_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/label_email"
        android:textColor="#9C1C4D"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/registerLabel" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_password"
        android:textColor="#9C1C4D"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername" />

    <TextView
        android:id="@+id/passwordLabel3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registr_label_username"
        android:textColor="#9C1C4D"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <CheckBox
        android:id="@+id/datenSchutzCB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registr_datenSchutzErklaerung"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton">

        <TextView
            android:id="@+id/backToAnmLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registr_already_account" />

        <Button
            android:id="@+id/backToAnmButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="@string/button_sign_in"
            android:textAlignment="center"
            android:textColor="#9C1C4D" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>