<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/anmeldeButton"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:layout_marginBottom="164dp"
        android:backgroundTint="#9C1C4D"
        android:text="@string/button_sign_in"
        android:visibility="visible"
        app:iconTint="#9C1C4D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/button_sign_in" />

    <EditText
        android:id="@+id/inputEmail2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/email_label_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/anmeldeButton"
        app:layout_constraintStart_toStartOf="@+id/anmeldeButton"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel2"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anmeldeButton">

        <TextView
            android:id="@+id/backToAnmLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_no_account" />

        <Button
            android:id="@+id/backToAnmButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="@string/button_register"
            android:textAlignment="center"
            android:textColor="#9C1C4D"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/anmeldeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/main_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/anmeldeButton"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/passwordLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_password"
        android:textColor="#9C1C4D"
        app:layout_constraintStart_toStartOf="@+id/anmeldeButton"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail2" />

    <TextView
        android:id="@+id/emailLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/label_email"
        android:textColor="#9C1C4D"
        app:layout_constraintStart_toStartOf="@+id/anmeldeButton"
        app:layout_constraintTop_toBottomOf="@+id/anmeldeLabel" />

    <EditText
        android:id="@+id/inputPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/main_password_label_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/anmeldeButton"
        app:layout_constraintStart_toStartOf="@+id/anmeldeButton"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel2"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>