<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificActivity">

    <TextView
        android:id="@+id/verificationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:text="@string/verification_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:foregroundTint="#9C1C4D"
        android:indeterminateTint="#9C1C4D"
        android:progressTint="#9C1C4D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verificationLabel" />

    <Button
        android:id="@+id/verificationButton"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#9C1C4D"
        android:text="@string/changeData_button"
        android:visibility="visible"
        app:iconTint="#9C1C4D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyBtn"
        tools:text="Change Data" />

    <Button
        android:id="@+id/verifyBtn"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#9C1C4D"
        android:text="@string/verify_button"
        android:visibility="visible"
        app:iconTint="#9C1C4D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        tools:text="Email verified?" />
</androidx.constraintlayout.widget.ConstraintLayout>